==> Immortals-Robotics/MainBoardFirmware/nrf24l01.c <==
#include "nrf24l01.h"

void nrf24l01_clear_ce()
{
    ioport_set_value( servo , 0 , 0 );
    ce_state = false;
}

void nrf24l01_set_ce()
{
    ioport_set_value( servo , 0 , 1 );
    ce_state = true;
}

void nrf24l01_clear_csn()
{
    spi_cs_lo(nrf_spi);
    csn_state = false;
}

void nrf24l01_set_csn()
{
    spi_cs_hi(nrf_spi);
    csn_state = true;
}

bool nrf24l01_irq_pin_active()
{
    if(( ioport_get_value(servo , 0) & 0x01 ) != 0)
        return false;
    else
        return true;
}
