==> miniwinwm/BluePillDemo/BluePillDemo_SPI_2.4GHz_Radio_Tx/Core/Src/nrf24l01.c <==
#include "stm32f1xx_hal.h"
#include "nrf24l01.h"

bool nrf24l01_irq_pin_active()
{
	bool irq = HAL_GPIO_ReadPin(GPIOB, GPIO_PIN_8);
	return !irq;
}

void nrf24l01_clear_ce()
{
	HAL_GPIO_WritePin(GPIOB, GPIO_PIN_9, GPIO_PIN_RESET);
	ce_active = true;
}

void nrf24l01_set_ce()
{
	HAL_GPIO_WritePin(GPIOB, GPIO_PIN_9, GPIO_PIN_SET);
	ce_active = false;
}

void nrf24l01_clear_csn()
{
	HAL_GPIO_WritePin(GPIOB, GPIO_PIN_12, GPIO_PIN_RESET);
	csn_active = true;
}

void nrf24l01_set_csn()
{
	HAL_GPIO_WritePin(GPIOB, GPIO_PIN_12, GPIO_PIN_SET);
	csn_active = false;
}
